WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
17555
REGRESSION (
r27351
): Thumbnails positioned wrong on Getty Images results page
https://bugs.webkit.org/show_bug.cgi?id=17555
Summary
REGRESSION (r27351): Thumbnails positioned wrong on Getty Images results page
mitz
Reported
2008-02-26 07:53:19 PST
Some of the thumbnails at the URL are positioned too low, showing behind their captions. This seems to happen to images that load (and get their final size) after the page is already laid out, so to reproduce you may need a slowish network and a clear cache. I could not reproduce the problem in Safari 3.0.4.
Attachments
Reduction
(352 bytes, text/html)
2008-02-26 09:22 PST
,
mitz
no flags
Details
Disallow table cells as relayout boundaries because their height can change
(9.37 KB, patch)
2008-02-26 10:43 PST
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2008-02-26 09:11:58 PST
Works:
r27337
Fails:
r27373
Probably <
http://trac.webkit.org/projects/webkit/changeset/27351
>
mitz
Comment 2
2008-02-26 09:22:38 PST
Created
attachment 19381
[details]
Reduction
mitz
Comment 3
2008-02-26 10:38:43 PST
<
rdar://problem/5766016
>
mitz
Comment 4
2008-02-26 10:43:40 PST
Created
attachment 19382
[details]
Disallow table cells as relayout boundaries because their height can change
Darin Adler
Comment 5
2008-02-26 10:47:56 PST
Comment on
attachment 19382
[details]
Disallow table cells as relayout boundaries because their height can change I think the comment from the change log should be in the code instead. r=me
mitz
Comment 6
2008-02-26 11:02:23 PST
Fixed in <
http://trac.webkit.org/projects/webkit/changeset/30595
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug