WebCore:

Reviewed by Darin Adler.

        - fix http://bugs.webkit.org/show_bug.cgi?id=17555
          <rdar://problem/5766016> REGRESSION (r27351): Thumbnails positioned wrong on Getty Images results page

        Test: fast/dynamic/subtree-table-cell-height.html

        * rendering/RenderObject.cpp:
        (WebCore::objectIsRelayoutBoundary): Exclude table cells, since their
        height depends on their contents even if the CSS height property is
        fixed.

LayoutTests:

        Reviewed by Darin Adler.

        - test for http://bugs.webkit.org/show_bug.cgi?id=17555
          <rdar://problem/5766016> REGRESSION (r27351): Thumbnails positioned wrong on Getty Images results page

        * fast/dynamic/subtree-table-cell-height.html: Added.
        * platform/mac/fast/dynamic/subtree-table-cell-height-expected.checksum: Added.
        * platform/mac/fast/dynamic/subtree-table-cell-height-expected.png: Added.
        * platform/mac/fast/dynamic/subtree-table-cell-height-expected.txt: Added.



Canonical link: https://commits.webkit.org/24306@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@30595 268f45cc-cd09-0410-ab3c-d52691b4dbfc